# fraiseql-wire

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  ROADMAP.md  SECURITY.md
.github/workflows/: fuzz.yml
.phases/: README.md  phase-01-ssl-request.md  phase-02-connection-string-parsing.md
benches/: integration_benchmarks.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: fuzz_decode_message.rs  fuzz_scram_parse.rs  fuzz_streaming_decode.rs
src/auth/: scram.rs
src/client/: connection_string.rs  fraise_client.rs
src/connection/: conn.rs  mod.rs  state.rs  tls.rs  transport.rs
src/protocol/: constants.rs  decode.rs  encode.rs  message.rs
src/stream/: adaptive_chunking.rs
tests/: integration.rs  load_tests.rs  streaming_integration.rs  stress_tests.rs  tls_integration.rs
