[workspace]
exclude = ["fuzz"]

[package]
name = "fraiseql-wire"
version = "0.1.3"
edition = "2021"
rust-version = "1.75"
authors = ["Lionel Hamayon <lionel@evolution-digitale.fr>"]
license = "MIT OR Apache-2.0"
description = "Streaming JSON query engine for Postgres 17"
homepage = "https://github.com/fraiseql/fraiseql-wire"
repository = "https://github.com/fraiseql/fraiseql-wire"
documentation = "https://docs.rs/fraiseql-wire"
readme = "README.md"
keywords = ["postgres", "postgresql", "json", "streaming", "async"]
categories = ["database", "asynchronous"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Bytes manipulation
bytes = "1"

# Error handling
thiserror = "1"

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# User info for default values
whoami = "1"

# TLS support
rustls = "0.23"
rustls-pemfile = "2.0"
webpki-roots = "0.26"
rustls-pki-types = "1"
rustls-native-certs = "0.8.3"
tokio-rustls = "0.26"

# Cryptography for SCRAM authentication
sha2 = "0.10"           # HMAC-SHA256 for SCRAM
pbkdf2 = "0.12"         # Key derivation for SCRAM
base64 = "0.22"         # Base64 encoding/decoding
rand = "0.8"            # Random nonce generation
hmac = "0.12"           # HMAC-SHA256

# Metrics for observability
metrics = "0.22"        # Metrics collection framework

[dev-dependencies]
tokio-test = "0.4"
criterion = { version = "0.5", features = ["async_tokio"] }
tokio-postgres = "0.7"

[[bench]]
name = "micro_benchmarks"
harness = false

[[bench]]
name = "integration_benchmarks"
harness = false
required-features = ["bench-with-postgres"]

[[bench]]
name = "comparison_benchmarks"
harness = false
required-features = ["bench-with-tokio-postgres"]

[[bench]]
name = "phase6_validation"
harness = false
required-features = ["bench-with-postgres"]

[features]
bench-with-postgres = []
bench-with-tokio-postgres = []

[lib]
name = "fraiseql_wire"
path = "src/lib.rs"

[[example]]
name = "basic_stream"
path = "examples/basic_stream.rs"
